Fixed Image rendering on small screen

--- a/beer_catalog.frontend/src/pages/FavoritesPage/favoritesPage.scss
+++ b/beer_catalog.frontend/src/pages/FavoritesPage/favoritesPage.scss
@@ -32,8 +32,7 @@
 }
 
 .favorite-page__beer-item {
-    display: flex;
-    justify-content: space-between;
+    display:block;
 
     width: auto;
     min-width: fit-content;
@@ -43,6 +42,13 @@
     padding: 30px;
 
     box-shadow: 0 4px 3px 2px #98999b80;
+}
+
+@media (min-width: 600px) {
+    .favorites-page__beer-item {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 @media (min-width: 1000px) {
